YUK-6881 BGE requirement missing: An update message should try to add an account if it doesn't exist.
- Added versions to xsds and added addOnFail attribute to update accounts request.